0.5.0
-----
1. Store analysis in BLISS_ANALYSIS tag, not in a COMMENT tag.
2. Fix read of tags during analysis phase.
3. Check for multiple genre tags, and if found add as semi-colon separated
   list to DB.
4. Multi-thread DB export.

0.4.0
-----
1. Add action to export results from database to files.
2. Add option to preserve file modification time when writing tags.

0.3.0
-----
1. Add support for (DSD) WavPack - thanks to Bart Lauret
2. Update version of tag reader library.
3. Update version of bliss library.
4. Allow builds to either use dynamic ffmpeg libraries, static ffmpeg
   libraries, symphonia, or ffmpeg on commandline.
5. Add ability to specify LMS JSONRPC port.
6. If new files analysed and 'ignore' file exists then update DB's 'ignore'
   flags.
7. Add option to write analysis results to files, and use for future scans.
8. If log level set to 'trace' then set this level for the bliss library too.
9. Enable support for '.dsf' files.

0.2.3
-----
1. Add option to limit number of concurrent threads.
2. Update version of tag reader library.
3. Update version of bliss library.

0.2.2
-----
1. Update version of tag reader library.
2. Update version of bliss library.

0.2.1
-----
1. Update version of tag reader library.
2. Fix checking if CUE already analysed.

0.2.0
-----
1. Tidy up code, thanks to Serial-ATA
2. Update version of tag reader library, should now support ID3v2 in FLAC.
3. Show error message if can't open, or create, database file.
4. Update version of bliss-rs, this now handles CUE processing internally.

0.1.0
-----
1. Add support for analysing CUE files.
2. Output list of (up to 100) tracks that failed to analyse.
3. When performing a dry-run analysis (--dry-run) print paths of all tracks to
   be analysed and to be removed.
4. Use git version of tag reader library.
5. Support up to 5 music folders (music, music_1, music_2, music_3, and
   music_4).

0.0.2
-----
1. Package vcruntime140.dll with Windows ZIP.
2. Update user docs.