@@ -5,6 +5,7 @@
 3. Check for multiple genre tags, and if found add as semi-colon separated
    list to DB.
 4. Multi-thread DB export.
+5. Add --read-tags and --write-tags commandline options.
 
 0.4.0
 -----
